--- a/admin.html
+++ b/admin.html
@@ -84,7 +84,7 @@
     const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
     firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
     const adminAccounts = { "aslin": "Phlagon@28", "IMC26": "IMC26@theo", "ASLIN26": "ASLIN26@theo" };
-    let activeUID = "", activeName = "", isSuperAdmin = false, logUnsub = null;
+    let activeUID = "", activeName = "", isSuperAdmin = false, logUnsub = null, currentLogs = [];
 
     function handleAdminLogin() {
         const id = document.getElementById('acid').value, p = document.getElementById('apass').value;
@@ -113,13 +113,41 @@
         refreshInbox();
     }
 
-    async function addNewBook() {
-        const t = document.getElementById('new-title').value.trim(), c = document.getElementById('new-cat').value, a = document.getElementById('new-access').value.trim().split(',').map(s=>s.trim());
-        if(!t || !c) return alert("Title and Category required");
-        await db.collection("library_settings").add({ title: t, category: c, allowedColleges: a, recent: true, trending: false });
-        alert("Entry Added!"); document.getElementById('new-title').value = "";
+    // LOGS ENGINE (RESTORED)
+    async function openReport(uid, name, role) {
+        activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden');
+        document.getElementById('modal-title').innerText = name;
+        if(isSuperAdmin) { document.getElementById('super-role-box').classList.remove('hidden'); document.getElementById('new-role-select').value = role || 'student'; }
+        if (logUnsub) logUnsub();
+        logUnsub = db.collection("activity_logs").where("userId", "==", uid).onSnapshot(snap => {
+            let t=0, o=0, b=0, html=""; currentLogs = [];
+            snap.forEach(d => { const data = d.data(); currentLogs.push(data); });
+            currentLogs.sort((x, y) => (y.startTime || 0) - (x.startTime || 0));
+            currentLogs.forEach(d => {
+                const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+                if(d.type.includes("Usage")) t += dur; if(d.type.includes("Online")) o += dur; if(d.type.includes("Borrowed")) b += dur;
+                html += `<tr><td>${d.type}<br><small>${d.activity || ''}</small></td><td>${d.startTime ? new Date(d.startTime).toLocaleTimeString() : '--'}</td><td>${d.endTime ? new Date(d.endTime).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
+            });
+            document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(b)}</b></div></div>`;
+            document.getElementById('log-body').innerHTML = html || "<tr><td colspan='4'>No activity</td></tr>";
+        });
     }
 
+    // DOWNLOAD ENGINE (FIXED)
+    function downloadCSV() {
+        if (!currentLogs.length) return alert("No logs to download");
+        let csv = "Activity,Start Date,Start Time,End Time,Duration\n";
+        currentLogs.forEach(d => {
+            const start = d.startTime ? new Date(d.startTime) : null;
+            const end = d.endTime ? new Date(d.endTime) : null;
+            const dur = end ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+            csv += `"${d.type} - ${d.activity || ''}",${start ? start.toLocaleDateString() : '--'},${start ? start.toLocaleTimeString() : '--'},${end ? end.toLocaleTimeString() : 'Active'},${fmt(dur)}\n`;
+        });
+        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
+        a.download = `${activeName}_Report.csv`; a.click();
+    }
+
+    // INBOX ENGINE (PRESERVED)
     function refreshInbox() {
         db.collection("admin_messages").orderBy("date", "desc").onSnapshot(snap => {
             const list = document.getElementById('inbox-list'); const nomList = document.getElementById('nomination-list');
@@ -138,36 +166,28 @@
         });
     }
 
-    async function openReport(uid, name, role) {
-        activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden');
-        document.getElementById('modal-title').innerText = name;
-        if(isSuperAdmin) { document.getElementById('super-role-box').classList.remove('hidden'); document.getElementById('new-role-select').value = role || 'student'; }
-        if (logUnsub) logUnsub();
-        logUnsub = db.collection("activity_logs").where("userId", "==", uid).onSnapshot(snap => {
-            let t=0, o=0, b=0, html="", logs = [];
-            snap.forEach(d => logs.push(d.data()));
-            logs.sort((x, y) => (y.startTime || 0) - (x.startTime || 0));
-            logs.forEach(d => {
-                const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
-                if(d.type.includes("Usage")) t += dur; if(d.type.includes("Online")) o += dur; if(d.type.includes("Borrowed")) b += dur;
-                html += `<tr><td>${d.type}<br><small>${d.activity || ''}</small></td><td>${d.startTime ? new Date(d.startTime).toLocaleTimeString() : '--'}</td><td>${d.endTime ? new Date(d.endTime).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
-            });
-            document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(b)}</b></div></div>`;
-            document.getElementById('log-body').innerHTML = html || "<tr><td colspan='4'>No activity</td></tr>";
-        });
+    async function addNewBook() {
+        const t = document.getElementById('new-title').value.trim(), c = document.getElementById('new-cat').value, a = document.getElementById('new-access').value.trim().split(',').map(s=>s.trim());
+        if(!t || !c) return alert("Title and Category required");
+        await db.collection("library_settings").add({ title: t, category: c, allowedColleges: a, recent: true, trending: false });
+        alert("Added!"); document.getElementById('new-title').value = "";
     }
 
-    function loadCollegeStudents(cid) { db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => { const list = document.getElementById('user-folders-list'); list.innerHTML = ""; snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}","${u.fullName}","${u.role}")'>📂 <b>${u.fullName}</b> ➔</div>`; }); }); }
-    async function deleteMsg(id) { if(confirm("Delete?")) await db.collection("admin_messages").doc(id).delete(); }
     async function changeUserRole() { await db.collection("users").doc(activeUID).update({ role: document.getElementById('new-role-select').value }); alert("Updated!"); }
     async function updF(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
-    async function toggleAccess(id, coll, has) { const ref = db.collection("library_settings").doc(id); const d = await ref.get(); let allowed = d.data().allowedColleges || []; allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll]; await ref.update({ allowedColleges: allowed }); }
+    async function toggleAccess(id, coll, has) { 
+        const ref = db.collection("library_settings").doc(id); const d = await ref.get();
+        let allowed = d.data().allowedColleges || [];
+        allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll];
+        await ref.update({ allowedColleges: allowed }); 
+    }
+    async function deleteMsg(id) { if(confirm("Delete?")) await db.collection("admin_messages").doc(id).delete(); }
     async function deletePDF(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
+    function loadCollegeStudents(cid) { db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => { const list = document.getElementById('user-folders-list'); list.innerHTML = ""; snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}","${u.fullName}","${u.role}")'>📂 <b>${u.fullName}</b> ➔</div>`; }); }); }
     function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
     function fmt(s) { if(isNaN(s) || s <= 0) return "00:00:00"; const h = Math.floor(s/3600).toString().padStart(2,'0'), m = Math.floor((s%3600)/60).toString().padStart(2,'0'), sec = (s%60).toString().padStart(2,'0'); return `${h}:${m}:${sec}`; }
     function closeModal() { document.getElementById('user-modal').classList.add('hidden'); if(logUnsub) logUnsub(); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
-    function downloadCSV() { /* Logic for individual report export */ }
 </script>
 </body>
 </html>
