--- a/admin.html
+++ b/admin.html
@@ -105,7 +105,11 @@
                     <td><b>${b.title}</b></td>
                     <td style="position:relative;">${isSuperAdmin ? `<button class="btn-sm" style="background:var(--purple)" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','${c}',${allowed.includes(c)})">${c} ${allowed.includes(c)?'✅':''}</div>`).join('')}</div>` : 'Restricted'}</td>
                     <td style="position:relative;">${isSuperAdmin ? `<button class="btn-sm" style="background:var(--green)" onclick="toggleM('c-${id}')">Cat</button><div id="c-${id}" class="dropdown-menu">${['Theology','Church History','Mission','Bible Intro','Acts','Ethics','Other Books'].map(cat => `<div class="dropdown-item" onclick="updF('${id}','category','${cat}')">${cat} ${b.category === cat ? '✅' : ''}</div>`).join('')}</div>` : b.category}</td>
-                    <td style="position:relative;">${isSuperAdmin ? `<button class="btn-sm" style="background:var(--orange)" onclick="toggleM('p-${id}')">Promo</button><div id="p-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','recent',${!b.recent})">Recent ${b.recent ? '✅' : ''}</div><div class="dropdown-item" onclick="updF('${id}','trending',${!b.trending})">Trending ${b.trending ? '✅' : ''}</div></div>` : 'None'}</td>
+                    <td style="position:relative;">${isSuperAdmin ? `<button class="btn-sm" style="background:var(--orange)" onclick="toggleM('p-${id}')">Promo</button>
+                        <div id="p-${id}" class="dropdown-menu">
+                            <div class="dropdown-item" onclick="updF('${id}','recent',${!b.recent})">Recent ${b.recent ? '✅' : ''}</div>
+                            <div class="dropdown-item" onclick="updF('${id}','trending',${!b.trending})">Trending ${b.trending ? '✅' : ''}</div>
+                        </div>` : 'None'}</td>
                     <td>${isSuperAdmin ? `<button class="btn-sm" style="background:red" onclick="deletePDF('${id}')">🗑️</button>` : 'None'}</td>
                 </tr>`;
             });
@@ -113,7 +117,7 @@
         refreshInbox();
     }
 
-    // LOGS ENGINE (RESTORED)
+    // LOGS VISIBILITY FIX
     async function openReport(uid, name, role) {
         activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden');
         document.getElementById('modal-title').innerText = name;
@@ -125,7 +129,7 @@
             currentLogs.sort((x, y) => (y.startTime || 0) - (x.startTime || 0));
             currentLogs.forEach(d => {
                 const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
-                if(d.type.includes("Usage")) t += dur; if(d.type.includes("Online")) o += dur; if(d.type.includes("Borrowed")) b += dur;
+                if(d.type.includes("Usage")) t += dur; if(d.type.includes("Online")) o += dur; if(d.type.includes("Borrowed") || d.type.includes("Full")) b += dur;
                 html += `<tr><td>${d.type}<br><small>${d.activity || ''}</small></td><td>${d.startTime ? new Date(d.startTime).toLocaleTimeString() : '--'}</td><td>${d.endTime ? new Date(d.endTime).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
             });
             document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(b)}</b></div></div>`;
@@ -133,21 +137,6 @@
         });
     }
 
-    // DOWNLOAD ENGINE (FIXED)
-    function downloadCSV() {
-        if (!currentLogs.length) return alert("No logs to download");
-        let csv = "Activity,Start Date,Start Time,End Time,Duration\n";
-        currentLogs.forEach(d => {
-            const start = d.startTime ? new Date(d.startTime) : null;
-            const end = d.endTime ? new Date(d.endTime) : null;
-            const dur = end ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
-            csv += `"${d.type} - ${d.activity || ''}",${start ? start.toLocaleDateString() : '--'},${start ? start.toLocaleTimeString() : '--'},${end ? end.toLocaleTimeString() : 'Active'},${fmt(dur)}\n`;
-        });
-        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
-        a.download = `${activeName}_Report.csv`; a.click();
-    }
-
-    // INBOX ENGINE (PRESERVED)
     function refreshInbox() {
         db.collection("admin_messages").orderBy("date", "desc").onSnapshot(snap => {
             const list = document.getElementById('inbox-list'); const nomList = document.getElementById('nomination-list');
@@ -166,6 +155,19 @@
         });
     }
 
+    function downloadCSV() {
+        if (!currentLogs.length) return alert("No logs to download");
+        let csv = "Activity,Start Date,Start Time,End Time,Duration\n";
+        currentLogs.forEach(d => {
+            const start = d.startTime ? new Date(d.startTime) : null;
+            const end = d.endTime ? new Date(d.endTime) : null;
+            const dur = end ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+            csv += `"${d.type} - ${d.activity || ''}",${start ? start.toLocaleDateString() : '--'},${start ? start.toLocaleTimeString() : '--'},${end ? end.toLocaleTimeString() : 'Active'},${fmt(dur)}\n`;
+        });
+        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
+        a.download = `${activeName}_Report.csv`; a.click();
+    }
+
     async function addNewBook() {
         const t = document.getElementById('new-title').value.trim(), c = document.getElementById('new-cat').value, a = document.getElementById('new-access').value.trim().split(',').map(s=>s.trim());
         if(!t || !c) return alert("Title and Category required");
@@ -181,7 +183,6 @@
         allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll];
         await ref.update({ allowedColleges: allowed }); 
     }
-    async function deleteMsg(id) { if(confirm("Delete?")) await db.collection("admin_messages").doc(id).delete(); }
     async function deletePDF(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
     function loadCollegeStudents(cid) { db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => { const list = document.getElementById('user-folders-list'); list.innerHTML = ""; snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}","${u.fullName}","${u.role}")'>📂 <b>${u.fullName}</b> ➔</div>`; }); }); }
     function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
