--- a/admin.html
+++ b/admin.html
@@ -67,7 +67,7 @@
 
         <div id="nom-section" class="hidden glass-card"><h2>📥 Faculty Nominations</h2><div id="nomination-list"></div></div>
         <div id="mem-section" class="hidden glass-card"><select id="mon-coll" onchange="loadCollegeStudents(this.value)" class="login-field" style="max-width:250px;"><option value="">Select College</option><option value="IMC26">IMC26</option><option value="ASLIN26">ASLIN26</option></select><div id="user-folders-list"></div></div>
-        <div id="stud-section" class="hidden glass-card"><h2>📤 Registration</h2><textarea id="bulk-input" class="login-field" style="height:100px;" placeholder="Name, CollID, StudentID, Pass, Role"></textarea></div>
+        <div id="stud-section" class="hidden glass-card"><h2>📤 Registration</h2><textarea id="bulk-input" class="login-field" style="height:100px;"></textarea></div>
         <div id="msg-section" class="hidden glass-card"><div style="display:flex; justify-content:space-between; align-items:center;"><h2>📥 Inbox</h2><button class="btn-sm" style="background:var(--orange);" onclick="refreshInbox()">🔄 Refresh</button></div><div id="inbox-list"></div></div>
     </div>
 
@@ -90,6 +90,7 @@
         const id = document.getElementById('acid').value, p = document.getElementById('apass').value;
         if(adminAccounts[id] === p) {
             isSuperAdmin = (id === "aslin"); document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden');
+            if(!isSuperAdmin) document.getElementById('t-nom').classList.add('hidden');
             initAdmin();
         } else alert("Denied");
     }
@@ -122,19 +123,34 @@
         if(isSuperAdmin) { document.getElementById('super-role-box').classList.remove('hidden'); document.getElementById('new-role-select').value = role || 'student'; }
         if (logUnsub) logUnsub();
         
-        // LOGS DISPLAY FIX
         logUnsub = db.collection("activity_logs").where("userId", "==", uid).onSnapshot(snap => {
             let t=0, o=0, b=0, html=""; currentLogs = [];
-            snap.forEach(d => { const data = d.data(); logsData = data; currentLogs.push(data); });
-            currentLogs.sort((x, y) => (y.startTime || 0) - (x.startTime || 0));
-            currentLogs.forEach(d => {
-                const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
-                if(d.type.includes("Usage")) t += dur; if(d.type.includes("Online")) o += dur; if(d.type.includes("Borrowed") || d.type.includes("Full")) b += dur;
-                html += `<tr><td>${d.type}<br><small>${d.activity || ''}</small></td><td>${d.startTime ? new Date(d.startTime).toLocaleTimeString() : '--'}</td><td>${d.endTime ? new Date(d.endTime).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
+            snap.forEach(d => { 
+                const data = d.data(); 
+                currentLogs.push(data); 
+                const dur = data.endTime ? Math.floor((data.endTime - data.startTime) / 1000) : 0;
+                if(data.type.includes("Usage")) t += dur; 
+                if(data.type.includes("Online")) o += dur; 
+                if(data.type.includes("Borrowed") || data.type.includes("Full")) b += dur;
+                html += `<tr><td>${data.type}<br><small>${data.activity || ''}</small></td><td>${data.startTime ? new Date(data.startTime).toLocaleTimeString() : '--'}</td><td>${data.endTime ? new Date(data.endTime).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
             });
+            currentLogs.sort((x, y) => (y.startTime || 0) - (x.startTime || 0));
             document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(b)}</b></div></div>`;
             document.getElementById('log-body').innerHTML = html || "<tr><td colspan='4'>No activity</td></tr>";
         });
+    }
+
+    function downloadCSV() {
+        if (!currentLogs.length) return alert("No logs to download");
+        let csv = "Activity,Start Date,Start Time,End Time,Duration\n";
+        currentLogs.forEach(d => {
+            const start = d.startTime ? new Date(d.startTime) : null;
+            const end = d.endTime ? new Date(d.endTime) : null;
+            const dur = end ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+            csv += `"${d.type} - ${d.activity || ''}",${start ? start.toLocaleDateString() : '--'},${start ? start.toLocaleTimeString() : '--'},${end ? end.toLocaleTimeString() : 'Active'},${fmt(dur)}\n`;
+        });
+        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
+        a.download = `${activeName}_Report.csv`; a.click();
     }
 
     function refreshInbox() {
@@ -160,19 +176,6 @@
         if(!t || !c) return alert("Title and Category required");
         await db.collection("library_settings").add({ title: t, category: c, allowedColleges: a, recent: true, trending: false });
         alert("Added!"); document.getElementById('new-title').value = "";
-    }
-
-    function downloadCSV() {
-        if (!currentLogs.length) return alert("No logs to download");
-        let csv = "Activity,Start Date,Start Time,End Time,Duration\n";
-        currentLogs.forEach(d => {
-            const start = d.startTime ? new Date(d.startTime) : null;
-            const end = d.endTime ? new Date(d.endTime) : null;
-            const dur = end ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
-            csv += `"${d.type} - ${d.activity || ''}",${start ? start.toLocaleDateString() : '--'},${start ? start.toLocaleTimeString() : '--'},${end ? end.toLocaleTimeString() : 'Active'},${fmt(dur)}\n`;
-        });
-        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
-        a.download = `${activeName}_Report.csv`; a.click();
     }
 
     async function changeUserRole() { await db.collection("users").doc(activeUID).update({ role: document.getElementById('new-role-select').value }); alert("Updated!"); }
